move all the atoms2dict etc. into helpers/converters

--- a/examples/fireworks/fireworks_tutorial/FireWorks_Tutorials.ipynb
+++ b/examples/fireworks/fireworks_tutorial/FireWorks_Tutorials.ipynb
@@ -20,7 +20,11 @@
     "mod_name = __name__\n",
     "def fibonacci_adder(num1, num2, stop_point=0):\n",
     "    if num1 + num2 < stop_point:\n",
-    "        new_fw = Firework(PyTask({'func': mod_name+'.fibonacci_adder', 'args': [num2, num1 + num2, stop_point]}))\n",
+    "        new_fw = Firework(\n",
+    "            PyTask({\n",
+    "                'func': mod_name + '.fibonacci_adder', \n",
+    "                'args': [num2, num1 + num2, stop_point]\n",
+    "            }))\n",
     "        print(f\"The current number is {num1+num2}\")\n",
     "        return FWAction(additions=new_fw)\n",
     "    else:\n",
@@ -48,48 +52,162 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The limit was reached, the next number is 1\n"
+      "2018-11-13 10:35:23,610 INFO RUNNING fw_id: 1 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-604200\n",
+      "2018-11-13 10:35:23,614 INFO Task started: PyTask.\n",
+      "The limit was reached, the next number is 1\n",
+      "2018-11-13 10:35:23,615 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:23,621 INFO Rocket finished\n"
      ]
     }
    ],
    "source": [
     "# No appending FWs\n",
-    "firework = Firework(PyTask({\"func\":mod_name+'.fibonacci_adder', \"args\":[0, 1, 0]}))\n",
+    "firework = Firework(\n",
+    "    PyTask({\n",
+    "        \"func\": mod_name + '.fibonacci_adder', \n",
+    "        \"args\":[0, 1, 0]\n",
+    "    }))\n",
     "launchpad.add_wf(firework)\n",
     "rapidfire(launchpad, FWorker(), strm_lvl=loglvl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2018-11-13 10:35:23,795 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-794929\n",
+      "2018-11-13 10:35:23,796 INFO Launching Rocket\n",
+      "2018-11-13 10:35:23,816 INFO RUNNING fw_id: 2 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-794929\n",
+      "2018-11-13 10:35:23,824 INFO Task started: PyTask.\n",
       "The current number is 1\n",
+      "2018-11-13 10:35:23,825 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:23,837 INFO Rocket finished\n",
+      "2018-11-13 10:35:23,840 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-840354\n",
+      "2018-11-13 10:35:23,840 INFO Launching Rocket\n",
+      "2018-11-13 10:35:23,850 INFO RUNNING fw_id: 3 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-840354\n",
+      "2018-11-13 10:35:23,854 INFO Task started: PyTask.\n",
       "The current number is 2\n",
+      "2018-11-13 10:35:23,854 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:23,864 INFO Rocket finished\n",
+      "2018-11-13 10:35:23,866 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-866738\n",
+      "2018-11-13 10:35:23,867 INFO Launching Rocket\n",
+      "2018-11-13 10:35:23,874 INFO RUNNING fw_id: 4 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-866738\n",
+      "2018-11-13 10:35:23,877 INFO Task started: PyTask.\n",
       "The current number is 3\n",
+      "2018-11-13 10:35:23,878 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:23,887 INFO Rocket finished\n",
+      "2018-11-13 10:35:23,889 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-889789\n",
+      "2018-11-13 10:35:23,890 INFO Launching Rocket\n",
+      "2018-11-13 10:35:23,900 INFO RUNNING fw_id: 5 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-889789\n",
+      "2018-11-13 10:35:23,903 INFO Task started: PyTask.\n",
       "The current number is 5\n",
+      "2018-11-13 10:35:23,904 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:23,915 INFO Rocket finished\n",
+      "2018-11-13 10:35:23,918 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-918630\n",
+      "2018-11-13 10:35:23,919 INFO Launching Rocket\n",
+      "2018-11-13 10:35:23,926 INFO RUNNING fw_id: 6 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-918630\n",
+      "2018-11-13 10:35:23,931 INFO Task started: PyTask.\n",
       "The current number is 8\n",
+      "2018-11-13 10:35:23,932 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:23,940 INFO Rocket finished\n",
+      "2018-11-13 10:35:23,942 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-942579\n",
+      "2018-11-13 10:35:23,943 INFO Launching Rocket\n",
+      "2018-11-13 10:35:23,955 INFO RUNNING fw_id: 7 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-942579\n",
+      "2018-11-13 10:35:23,958 INFO Task started: PyTask.\n",
       "The current number is 13\n",
+      "2018-11-13 10:35:23,959 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:23,970 INFO Rocket finished\n",
+      "2018-11-13 10:35:23,972 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-972861\n",
+      "2018-11-13 10:35:23,973 INFO Launching Rocket\n",
+      "2018-11-13 10:35:23,981 INFO RUNNING fw_id: 8 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-972861\n",
+      "2018-11-13 10:35:23,986 INFO Task started: PyTask.\n",
       "The current number is 21\n",
+      "2018-11-13 10:35:23,987 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:23,994 INFO Rocket finished\n",
+      "2018-11-13 10:35:23,998 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-998298\n",
+      "2018-11-13 10:35:23,999 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,010 INFO RUNNING fw_id: 9 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-23-998298\n",
+      "2018-11-13 10:35:24,014 INFO Task started: PyTask.\n",
       "The current number is 34\n",
+      "2018-11-13 10:35:24,014 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,027 INFO Rocket finished\n",
+      "2018-11-13 10:35:24,029 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-029589\n",
+      "2018-11-13 10:35:24,030 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,040 INFO RUNNING fw_id: 10 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-029589\n",
+      "2018-11-13 10:35:24,043 INFO Task started: PyTask.\n",
       "The current number is 55\n",
+      "2018-11-13 10:35:24,044 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,055 INFO Rocket finished\n",
+      "2018-11-13 10:35:24,058 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-058072\n",
+      "2018-11-13 10:35:24,058 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,067 INFO RUNNING fw_id: 11 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-058072\n",
+      "2018-11-13 10:35:24,071 INFO Task started: PyTask.\n",
       "The current number is 89\n",
+      "2018-11-13 10:35:24,072 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,082 INFO Rocket finished\n",
+      "2018-11-13 10:35:24,084 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-084799\n",
+      "2018-11-13 10:35:24,085 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,094 INFO RUNNING fw_id: 12 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-084799\n",
+      "2018-11-13 10:35:24,097 INFO Task started: PyTask.\n",
       "The current number is 144\n",
+      "2018-11-13 10:35:24,098 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,110 INFO Rocket finished\n",
+      "2018-11-13 10:35:24,112 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-112399\n",
+      "2018-11-13 10:35:24,112 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,120 INFO RUNNING fw_id: 13 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-112399\n",
+      "2018-11-13 10:35:24,124 INFO Task started: PyTask.\n",
       "The current number is 233\n",
+      "2018-11-13 10:35:24,125 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,138 INFO Rocket finished\n",
+      "2018-11-13 10:35:24,142 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-142126\n",
+      "2018-11-13 10:35:24,143 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,156 INFO RUNNING fw_id: 14 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-142126\n",
+      "2018-11-13 10:35:24,160 INFO Task started: PyTask.\n",
       "The current number is 377\n",
+      "2018-11-13 10:35:24,161 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,171 INFO Rocket finished\n",
+      "2018-11-13 10:35:24,173 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-173724\n",
+      "2018-11-13 10:35:24,174 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,183 INFO RUNNING fw_id: 15 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-173724\n",
+      "2018-11-13 10:35:24,186 INFO Task started: PyTask.\n",
       "The current number is 610\n",
+      "2018-11-13 10:35:24,186 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,196 INFO Rocket finished\n",
+      "2018-11-13 10:35:24,198 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-198736\n",
+      "2018-11-13 10:35:24,199 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,206 INFO RUNNING fw_id: 16 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-198736\n",
+      "2018-11-13 10:35:24,210 INFO Task started: PyTask.\n",
       "The current number is 987\n",
-      "The limit was reached, the next number is 1597\n"
+      "2018-11-13 10:35:24,212 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,221 INFO Rocket finished\n",
+      "2018-11-13 10:35:24,223 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-223257\n",
+      "2018-11-13 10:35:24,223 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,234 INFO RUNNING fw_id: 17 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-223257\n",
+      "2018-11-13 10:35:24,237 INFO Task started: PyTask.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The limit was reached, the next number is 1597\n",
+      "2018-11-13 10:35:24,237 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,245 INFO Rocket finished\n"
      ]
     }
    ],
    "source": [
     "# No appending FWs\n",
-    "firework = Firework(PyTask({\"func\":mod_name+'.fibonacci_adder', \"args\":[0, 1, 1000]}))\n",
+    "firework = Firework(\n",
+    "    PyTask({\n",
+    "        \"func\": mod_name + '.fibonacci_adder', \n",
+    "        \"args\":[0, 1, 1000]\n",
+    "    }))\n",
     "launchpad.add_wf(firework)\n",
     "rapidfire(launchpad, FWorker(), strm_lvl=loglvl)"
    ]
@@ -110,7 +228,8 @@
     "from fireworks.core.rocket_launcher import launch_rocket, rapidfire\n",
     "\n",
     "# Minimal hilde inputs\n",
-    "from hilde.structure.structure import pAtoms, dict2patoms, patoms2dict\n",
+    "from hilde.structure.structure import pAtoms\n",
+    "from hilde.helpers.converters import dict2patoms, patoms2dict\n",
     "from hilde.helpers.hash import hash_atoms\n",
     "\n",
     "mod_name = __name__"
@@ -160,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "database: /home/purcell/git/hilde/examples/fireworks/fireworks_tutorial/test.db\n"
+      "database: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/test.db\n"
      ]
     }
    ],
@@ -191,6 +310,19 @@
    "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-11-13 10:35:24,580 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,589 INFO RUNNING fw_id: 1 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial\n",
+      "2018-11-13 10:35:24,593 INFO Task started: PyTask.\n",
+      "2018-11-13 10:35:24,623 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,626 INFO Task started: PyTask.\n",
+      "2018-11-13 10:35:24,677 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,693 INFO Rocket finished\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -252,7 +384,26 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-11-13 10:35:24,752 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-752037\n",
+      "2018-11-13 10:35:24,753 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,773 INFO RUNNING fw_id: 3 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-752037\n",
+      "2018-11-13 10:35:24,778 INFO Task started: PyTask.\n",
+      "2018-11-13 10:35:24,805 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,816 INFO Rocket finished\n",
+      "2018-11-13 10:35:24,819 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-819367\n",
+      "2018-11-13 10:35:24,820 INFO Launching Rocket\n",
+      "2018-11-13 10:35:24,828 INFO RUNNING fw_id: 2 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-24-819367\n",
+      "2018-11-13 10:35:24,832 INFO Task started: PyTask.\n",
+      "2018-11-13 10:35:24,862 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:24,869 INFO Rocket finished\n"
+     ]
+    }
+   ],
    "source": [
     "fw_calc = Firework(PyTask({\"func\": mod_name+\".calculate\", \"args\": [al_dict]}))\n",
     "fw_to_db = Firework(PyTask({\"func\":mod_name+\".calc_to_db\", \"args\":[db_path], \"inputs\":[\"calc_atoms\"]}))\n",
@@ -291,6 +442,7 @@
     "from phonopy.structure.atoms import PhonopyAtoms\n",
     "from hilde.phonon_db.row import phonon2dict, PhononRow\n",
     "from hilde.phonon_db.phonon_db import connect as connect_ph\n",
+    "\n",
     "def to_phonopy_atoms(atoms):\n",
     "    phonopy_atoms = PhonopyAtoms(\n",
     "        symbols=atoms.get_chemical_symbols(),\n",
@@ -381,7 +533,38 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-11-13 10:35:25,324 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-25-324373\n",
+      "2018-11-13 10:35:25,325 INFO Launching Rocket\n",
+      "2018-11-13 10:35:25,335 INFO RUNNING fw_id: 6 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-25-324373\n",
+      "2018-11-13 10:35:25,340 INFO Task started: PyTask.\n",
+      "2018-11-13 10:35:25,341 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:25,360 INFO Rocket finished\n",
+      "2018-11-13 10:35:25,364 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-25-364235\n",
+      "2018-11-13 10:35:25,364 INFO Launching Rocket\n",
+      "2018-11-13 10:35:25,374 INFO RUNNING fw_id: 7 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-25-364235\n",
+      "2018-11-13 10:35:25,380 INFO Task started: PyTask.\n",
+      "2018-11-13 10:35:25,544 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:25,569 INFO Rocket finished\n",
+      "2018-11-13 10:35:25,572 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-25-572728\n",
+      "2018-11-13 10:35:25,573 INFO Launching Rocket\n",
+      "2018-11-13 10:35:25,588 INFO RUNNING fw_id: 5 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-25-572728\n",
+      "2018-11-13 10:35:25,597 INFO Task started: PyTask.\n",
+      "2018-11-13 10:35:26,689 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:28,042 INFO Rocket finished\n",
+      "2018-11-13 10:35:28,206 INFO Created new dir /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-28-205948\n",
+      "2018-11-13 10:35:28,206 INFO Launching Rocket\n",
+      "2018-11-13 10:35:28,846 INFO RUNNING fw_id: 4 in directory: /home/knoop/local/hilde/examples/fireworks/fireworks_tutorial/launcher_2018-11-13-09-35-28-205948\n",
+      "2018-11-13 10:35:29,140 INFO Task started: PyTask.\n",
+      "2018-11-13 10:35:29,190 INFO Task completed: PyTask \n",
+      "2018-11-13 10:35:29,531 INFO Rocket finished\n"
+     ]
+    }
+   ],
    "source": [
     "fw_initialize = Firework(ft_initialize)\n",
     "fw_get_fc = Firework(ft_get_fc)\n",
@@ -600,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
