introduce molecular_dynamics module

--- a/examples/md/watchdog/md_with_watchdog.ipynb
+++ b/examples/md/watchdog/md_with_watchdog.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "atoms = read('si.in', format='aims')"
+    "atoms = read('../si.in', format='aims')"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aims = setup_aims(custom_settings={'compute_forces': True}, port=12345)"
+    "aims = setup_aims(config_file=\"../../../hilde.cfg\", custom_settings={'compute_forces': True}, port=12345)"
    ]
   },
   {
@@ -57,9 +57,10 @@
      "output_type": "stream",
      "text": [
       "0.00, 0.00, 30.00 0.00\n",
-      "0.00, 0.00, 18.22 11.78\n",
-      "5.89, 11.78, 13.31 16.69\n",
-      "5.56, 11.12, 7.01 22.99\n"
+      "0.00, 0.00, 18.93 11.07\n",
+      "5.53, 11.07, 15.35 14.65\n",
+      "4.88, 9.77, 11.21 18.79\n",
+      "4.70, 9.39, 7.71 22.29\n"
      ]
     }
    ],
@@ -68,11 +69,12 @@
     "\n",
     "with SocketIOCalculator(aims, port=12345) as calc:\n",
     "    atoms.calc = calc\n",
-    "    for _ in md.irun(steps=1000):\n",
+    "    for _ in range(1000):\n",
     "        print(f'{watchdog.increment_per_step:.2f}, {watchdog.buffer_time:.2f}, ' +\n",
     "              f'{watchdog.time_left:.2f} {watchdog.elapsed:.2f}')\n",
     "        if watchdog():\n",
-    "            break"
+    "            break\n",
+    "        md.run(1)"
    ]
   },
   {
