--- a/examples/fireworks/fireworks_tutorial/FireWorks_Tutorials.ipynb
+++ b/examples/fireworks/fireworks_tutorial/FireWorks_Tutorials.ipynb
@@ -47,8 +47,9 @@
    "source": [
     "# set up the LaunchPad and reset it (loglvl 'CRITICAL' reduces spam from the launchpad)\n",
     "loglvl = 'CRITICAL'\n",
-    "launchpad = LaunchPad(strm_lvl=loglvl)\n",
-    "launchpad.reset('', require_password=False)"
+    "launchpad = LaunchPad(strm_lvl=loglvl, port=27018)\n",
+    "# Reset is an rm -rf * for the FireWorks Databse, use only if you know its safe\n",
+    "# launchpad.reset('', require_password=False)"
    ]
   },
   {
@@ -170,9 +171,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set up the LaunchPad and reset it\n",
-    "launchpad = LaunchPad(strm_lvl=\"CRITICAL\")\n",
-    "launchpad.reset('', require_password=False)\n",
     "# Add a firework with two tasks and launch the firework\n",
     "launchpad.add_wf(Firework([ft_calc, ft_to_db]))\n",
     "# launch_rocket computes a single Firework\n",
@@ -258,6 +256,7 @@
     "    return phonopy_atoms\n",
     "# Redefine calculate with a mod_spec instead of update_spec\n",
     "def calculate(atoms_dict):\n",
+    "    print(\"Single point calculation\")\n",
     "    at = dict2patoms(atoms_dict)\n",
     "    at.calc.calculate(at, properties=['forces'])\n",
     "    # mod_spec allows the user to add elements at the end of a list stored inside the spec\n",
@@ -295,7 +294,7 @@
     "    atoms_hash, calc_hash = hash_atoms(at)\n",
     "    selection = [(\"atoms_hash\", \"=\", atoms_hash), \n",
     "                 (\"calc_hash\", \"=\", calc_hash), \n",
-    "                 (\"supercell_matrix\", \"=\", phonon_dict[\"supercell_matrix\"])]\n",
+    "                 (\"sc_matrix_2\", \"=\", phonon_dict[\"sc_matrix_2\"])]\n",
     "    try:\n",
     "        rows = list(db.select(selection=selection))\n",
     "        if not rows:\n",
@@ -370,9 +369,192 @@
     "#Access the database to check the results\n",
     "db = connect_ph(db_path)\n",
     "row = list(db.select(selection=[(\"atoms_hash\", \"=\", ni_hash), \n",
-    "                                (\"supercell_matrix\", \"=\", list(smatrix.flatten()))], \n",
-    "                     columns=[\"force_constants\"]))[0]\n",
-    "print(f\"The force constants are:\\n{row.get('force_constants')}\")"
+    "                                (\"sc_matrix_2\", \"=\", list(smatrix.flatten()))], \n",
+    "                     columns=[\"fc_2\"]))[0]\n",
+    "print(f\"The force constants are:\\n{row.get('fc_2')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combined local/remote queue launching\n",
+    "from hilde.fireworks_api_adapter.combined_launcher import rapidfire as lq_rapidfire\n",
+    "from hilde.fireworks_api_adapter.launchpad import LaunchPadHilde as LaunchPad\n",
+    "# Import the hilde calculate function so both the local and remote machines have the same function in their path\n",
+    "from hilde.tasks.fireworks import calculate as hilde_calc\n",
+    "# Use ASE aims calculator\n",
+    "from ase.calculators.aims import Aims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "launchpad = LaunchPad(port=27018, strm_lvl=loglvl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Redefine calculate_multiple so the calculate Fireworks have a modified _queueadapter spec\n",
+    "def calculate_multiple(workdir, atom_dicts, queue_spec):\n",
+    "    firework_detours = []\n",
+    "    for i, cell in enumerate(atom_dicts):\n",
+    "        task = PyTask({\"func\": hilde_calc.name,\n",
+    "                       \"args\": [workdir, \"calc_forces\", cell]})\n",
+    "        # Changes to queue submission properties occur at Fireworks level via spec\n",
+    "        firework_detours.append(Firework(task, name=f\"calc_{i}\", spec=queue_spec))\n",
+    "    return FWAction(detours=firework_detours)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remote Settings (Change these to match what you need)\n",
+    "remote_settings={\n",
+    "    # Has to be a full path to the host, draco.mpcdf.mpg.de will time out. Needs to be a list\n",
+    "    \"remote_host\": [\"draco01.mpcdf.mpg.de\"],\n",
+    "    # Not necessary if remote host is username@host\n",
+    "    \"remote_user\": \"tpurcell\",\n",
+    "    # Try to avoid using this\n",
+    "    \"remote_password\": None,\n",
+    "    \"remote_config_dir\": [\"/u/tpurcell/.fireworks\"],\n",
+    "    # If you are using Kerberos this needs to be True\n",
+    "    \"gss_auth\": True,\n",
+    "    \"aims_command\": \"srun /u/tpurcell/git/fhiaims_dev/bin/aims.180824.scalapack.mpi.x\",\n",
+    "    \"aims_species_dir\": \"/u/tpurcell/git/fhiaims_dev/species_defaults/\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aims calculator settings\n",
+    "aims_settings = {\n",
+    "    \"xc\": \"pw-lda\",\n",
+    "    \"relativistic\": \"atomic_zora scalar\",\n",
+    "    \"sc_accuracy_rho\": 1E-6,\n",
+    "    \"sc_accuracy_forces\": 1E-3,\n",
+    "    \"sc_iter_limit\": 50,\n",
+    "    \"mixer\": \"pulay\",\n",
+    "    \"n_max_pulay\": 10,\n",
+    "    \"charge_mix_param\": 0.3,\n",
+    "    \"k_grid\": [4, 4, 4],\n",
+    "    \"output_level\": \"MD_light\",\n",
+    "    # This information must be set to the remote commands\n",
+    "    \"species_dir\": remote_settings[\"aims_species_dir\"] + \"/light\",\n",
+    "    \"aims_command\": remote_settings[\"aims_command\"]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use diamond silicon as a test material\n",
+    "si = pAtoms(bulk('Si', 'diamond'))\n",
+    "si.calc = Aims(**aims_settings)\n",
+    "si_hash, calc_hash = hash_atoms(si)\n",
+    "\n",
+    "# Initialize phononpy \n",
+    "smatrix = np.array([-2, 2, 2, 2, -2, 2, 2, 2, -2]).reshape(3,3)\n",
+    "db_path = os.getcwd() + \"test_ph.db\"\n",
+    "\n",
+    "ph_atoms = to_phonopy_atoms(si)\n",
+    "\n",
+    "phonon = Phonopy(ph_atoms, supercell_matrix=smatrix, symprec=1e-5, is_symmetry=True, factor=15.633302)\n",
+    "phonon_dict = phonon_to_dict(phonon)\n",
+    "pc_dict = patoms2dict(si)\n",
+    "phonon.generate_displacements(distance=0.01)\n",
+    "scs = phonon.get_supercells_with_displacements()\n",
+    "sc_dicts = []\n",
+    "for i, sc in enumerate(scs):\n",
+    "    scs[i] = pAtoms(phonopy_atoms=sc)\n",
+    "    scs[i].info['disp_num'] = i\n",
+    "    scs[i].calc = si.calc\n",
+    "    sc_dicts.append(patoms2dict(scs[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_spec = {\n",
+    "    # Submission script changes are controled by the _queueadapter dictionary\n",
+    "    \"_queueadapter\":{\n",
+    "        # Keys are the same that you define in \"my_qadapter.yaml\"\n",
+    "        \"walltime\": \"00:05:00\",\n",
+    "        \"nodes\": 2\n",
+    "    }\n",
+    "}\n",
+    "# Create Firetasks for each part of the calculation\n",
+    "workdir = \"/u/tpurcell/.fireworks/SiTutorialExample/\"\n",
+    "ft_initialize = PyTask({\"func\": mod_name + \".calculate_multiple\", \"args\":[workdir, sc_dicts, q_spec]})\n",
+    "ft_get_fc = PyTask({\"func\": mod_name + \".get_fcs\", \"args\":[phonon_dict, pc_dict], \"inputs\":[\"calc_forces\"]})\n",
+    "ft_calc_to_db = PyTask({\"func\": mod_name + \".calc_to_db\", \"args\":[db_path, pc_dict], \"inputs\":[\"phonon_dict\"]})\n",
+    "\n",
+    "# Initialize the Fireworks\n",
+    "fw_initialize = Firework(ft_initialize)\n",
+    "fw_get_fc = Firework(ft_get_fc)\n",
+    "fw_calc_to_db = Firework(ft_calc_to_db)\n",
+    "\n",
+    "wf = Workflow([fw_initialize, fw_get_fc, fw_calc_to_db], {fw_initialize:[fw_get_fc], fw_get_fc: [fw_calc_to_db]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "launchpad.add_wf(wf)\n",
+    "lq_rapidfire(launchpad, \n",
+    "             launch_dir='.', \n",
+    "             nlaunches=0, \n",
+    "             njobs_queue=250, \n",
+    "             wflow=wf, \n",
+    "             njobs_block=500,\n",
+    "             sleep_time=60, \n",
+    "             reserve=True, \n",
+    "             remote_host=remote_settings['remote_host'],\n",
+    "             remote_user=remote_settings['remote_user'], \n",
+    "             remote_password=remote_settings['remote_password'],\n",
+    "             remote_config_dir=remote_settings[\"remote_config_dir\"],\n",
+    "             # List of tasks that should be done on the queue\n",
+    "             tasks2queue=[hilde_calc.name],\n",
+    "             gss_auth=remote_settings[\"gss_auth\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Access the database to check the results\n",
+    "db = connect_ph(db_path)\n",
+    "row = list(db.select(selection=[(\"atoms_hash\", \"=\", si_hash),\n",
+    "                                (\"sc_matrix_2\", \"=\", list(smatrix.flatten()))],\n",
+    "                     columns=[\"fc_2\"]))[0]\n",
+    "print(f\"The force constants are:\\n{row.get('fc_2')}\")"
    ]
   },
   {
