I am in the process of cleaning up code/documentation, and testing postgresql connection. The connection cuts out for large data streams seeing if it is an issue with ssh connection or with the python postgresql connection

--- a/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
+++ b/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,67 +41,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "database: /home/purcell/git/hilde/examples/fireworks/fireworks_tutorial/test.db\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Initialize Structures\n",
-    "db_path = (os.getcwd() + '/test.db')\n",
-    "print(f'database: {db_path}')\n",
+    "# Intialize Structures\n",
+    "al = pAtoms(bulk('Al', 'fcc'))\n",
+    "al.set_calculator(EMT())\n",
+    "al_dict = patoms2dict(ni)\n",
     "\n",
-    "ni = pAtoms(bulk('Ni', cubic=True))\n",
-    "ni.set_calculator(EMT())\n",
-    "ni_dict = patoms2dict(ni)\n",
-    "\n",
-    "ni_hash, calc_hash = hash_atoms(ni)"
+    "al_hash, calc_hash = hash_atoms(ni)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# To pass things to Fireworks they need to be in json string form or an object that can be easily\n",
     "# converted to a json string (like a dict)\n",
+    "# Function are passed by their module_name.file_name\n",
     "ft_calc = PyTask({\"func\": mod_name+\".calculate\", \"args\": [ni_dict]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2018-11-14 22:41:36,890 INFO Added a workflow. id_map: {-1: 184}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Add a firework with two tasks and launch the firework\n",
+    "# Add a firework with the task to define a job\n",
     "wf = Workflow([Firework([ft_calc])])\n",
-    "launchpad = LaunchPad(port=27018)\n",
+    "launchpad = LaunchPad()\n",
     "launchpad.add_wf(wf)\n",
     "# launch_rocket computes a single Firework\n",
     "launch_rocket(launchpad, strm_lvl=\"CRITICAL\")"
@@ -109,25 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Atomic forces are:\n",
-      "[[ 2.75670600e-15 -1.06217932e-16 -5.86336535e-16]\n",
-      " [ 2.08575155e-14 -2.32452946e-15 -1.40512602e-15]\n",
-      " [-2.75474088e-15  2.34534614e-15  1.25940924e-15]\n",
-      " [-9.96193416e-15 -2.80117861e-15  2.01227923e-16]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Connect to the database and retrieve your calculated results\n",
     "# Once something is inside Fireworks it can only be accessed through it's database or a database/file\n",
     "# the user specified inside the tasks\n",
+    "# Getting the results from FireWorks\n",
     "fw_spec = launchpad.get_fw_dict_by_id(wf.root_fw_ids[0])\n",
     "forces = fw_spec['launches'][0]['action']['update_spec']['calc_atoms']['forces']\n",
     "print(f\"Atomic forces are:\\n{np.array(forces)}\")"
@@ -135,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,18 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2018-11-14 22:41:48,355 INFO Added a workflow. id_map: {-3: 185, -2: 186}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Set up database\n",
+    "db_path = (os.getcwd() + '/test.db')\n",
+    "print(f'database: {db_path}')\n",
     "# Set up a Workflow where each FireTask has its own Firework\n",
     "fw_calc = Firework(PyTask({\"func\": mod_name+\".calculate\", \"args\": [ni_dict]}))\n",
     "# Args and Inputs are broken up into two objects (Can be up to three) \n",
@@ -190,26 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Atomic forces from the new atoms are: \n",
-      "[[ 2.75670600e-15 -1.06217932e-16 -5.86336535e-16]\n",
-      " [ 2.08575155e-14 -2.32452946e-15 -1.40512602e-15]\n",
-      " [-2.75474088e-15  2.34534614e-15  1.25940924e-15]\n",
-      " [-9.96193416e-15 -2.80117861e-15  2.01227923e-16]]\n",
-      "Atomic forces from the row is: \n",
-      "[[ 2.75670600e-15 -1.06217932e-16 -5.86336535e-16]\n",
-      " [ 2.08575155e-14 -2.32452946e-15 -1.40512602e-15]\n",
-      " [-2.75474088e-15  2.34534614e-15  1.25940924e-15]\n",
-      " [-9.96193416e-15 -2.80117861e-15  2.01227923e-16]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# See the results with the database access\n",
     "db = connect(db_path)\n",
@@ -221,18 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/purcell/bin/python/anaconda3.6/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Combined local/remote queue launching\n",
     "from hilde.fireworks_api_adapter.combined_launcher import rapidfire as lq_rapidfire\n",
@@ -243,16 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Port changes are for my setup\n",
     "launchpad = LaunchPad(port=27018, strm_lvl=\"CRITICAL\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,36 +257,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2018-11-14 22:50:57,370 INFO Added a workflow. id_map: {-11: 193, -10: 194}\n",
-      "[194]\n",
-      "qlaunch_hilde --reserve rapidfire --maxjobs_queue 250 --maxjobs_block 500 --nlaunches 1 --sleep 60 --firework_ids 194\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "mkl(3):ERROR:105: Unable to locate a modulefile for 'mkl/2018'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Setting nlaunches to the length of fw_ids.\n",
-      "2018-11-14 22:51:24,943 INFO The number of jobs currently in the queue is: 0\n",
-      "2018-11-14 22:51:25,094 INFO Job submission was successful and job_id is 6572140\n",
-      "[194]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "launchpad.add_wf(wf)\n",
     "lq_rapidfire(launchpad, \n",
@@ -378,26 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Atomic forces from the new atoms are: \n",
-      "[[ 2.75670600e-15 -1.06217932e-16 -5.86336535e-16]\n",
-      " [ 2.08575155e-14 -2.32452946e-15 -1.40512602e-15]\n",
-      " [-2.75474088e-15  2.34534614e-15  1.25940924e-15]\n",
-      " [-9.96193416e-15 -2.80117861e-15  2.01227923e-16]]\n",
-      "Atomic forces from the row is: \n",
-      "[[ 2.75670600e-15 -1.06217932e-16 -5.86336535e-16]\n",
-      " [ 2.08575155e-14 -2.32452946e-15 -1.40512602e-15]\n",
-      " [-2.75474088e-15  2.34534614e-15  1.25940924e-15]\n",
-      " [-9.96193416e-15 -2.80117861e-15  2.01227923e-16]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# See the results with the database access\n",
     "db = connect(db_path)\n",
