--- a/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
+++ b/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
@@ -46,11 +46,11 @@
    "outputs": [],
    "source": [
     "# Intialize Structures\n",
-    "al = pAtoms(bulk('Al', 'fcc'))\n",
-    "al.set_calculator(EMT())\n",
-    "al_dict = patoms2dict(ni)\n",
+    "ni = pAtoms(bulk('Ni', cubic=True))\n",
+    "ni.set_calculator(EMT())\n",
+    "ni_dict = patoms2dict(ni)\n",
     "\n",
-    "al_hash, calc_hash = hash_atoms(ni)"
+    "ni_hash, calc_hash = hash_atoms(ni)"
    ]
   },
   {
