--- a/examples/fireworks/fireworks_tutorial/FireWorks_Tutorials.ipynb
+++ b/examples/fireworks/fireworks_tutorial/FireWorks_Tutorials.ipynb
@@ -20,8 +20,9 @@
     "from fireworks.core.rocket_launcher import launch_rocket\n",
     "from fw_tutorials.firetask.addition_task import AdditionTask\n",
     "\n",
+    "loglvl = \"CRITICAL\"\n",
     "# set up the LaunchPad and reset it\n",
-    "launchpad = LaunchPad()\n",
+    "launchpad = LaunchPad(strm_lvl=loglvl)\n",
     "# launchpad.reset('', require_password=False)\n",
     "\n",
     "# create the Firework consisting of a custom \"Addition\" task\n",
@@ -29,7 +30,7 @@
     "\n",
     "# store workflow and launch it locally\n",
     "launchpad.add_wf(firework)\n",
-    "launch_rocket(launchpad, FWorker())"
+    "launch_rocket(launchpad, FWorker(), strm_lvl=loglvl)"
    ]
   },
   {
@@ -38,17 +39,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''How to define a FireWork's Workflow'''\n",
-    "from fireworks import Firework, Workflow, FWorker, LaunchPad, ScriptTask\n",
+    "'''How to define a FireWork's Workflow with PyTask'''\n",
+    "from fireworks import Firework, Workflow, FWorker, LaunchPad, PyTask\n",
     "from fireworks.core.rocket_launcher import rapidfire\n",
-    "launchpad = LaunchPad()\n",
-    "# launchpad.reset('', require_password=False)\n",
+    "launchpad = LaunchPad(strm_lvl=loglvl)\n",
+    "\n",
+    "# FireWorks needs to be able to find functions inside your python path, find the module name for this file\n",
+    "mod_name = __name__\n",
+    "\n",
+    "def print_message(to_print):\n",
+    "    print(to_print)\n",
     "\n",
     "# define four individual FireWorks used in the Workflow\n",
-    "task1 = ScriptTask.from_str('echo \"Ingrid is the CEO.\"')\n",
-    "task2 = ScriptTask.from_str('echo \"Jill is a manager.\"')\n",
-    "task3 = ScriptTask.from_str('echo \"Jack is a manager.\"')\n",
-    "task4 = ScriptTask.from_str('echo \"Kip is an intern.\"')\n",
+    "task1 = PyTask({\"func\": mod_name+\".print_message\", \"args\": [\"Ingrid is the CEO.\"]})\n",
+    "task2 = PyTask({\"func\": mod_name+\".print_message\", \"args\": [\"Jill is a manager.\"]})\n",
+    "task3 = PyTask({\"func\": mod_name+\".print_message\", \"args\": [\"Jack is a manager.\"]})\n",
+    "task4 = PyTask({\"func\": mod_name+\".print_message\", \"args\": [\"Kip is an intern.\"]})\n",
     "\n",
     "fw1 = Firework(task1)\n",
     "fw2 = Firework(task2)\n",
@@ -60,7 +66,7 @@
     "\n",
     "# store workflow and launch it locally\n",
     "launchpad.add_wf(workflow)\n",
-    "rapidfire(launchpad, FWorker())"
+    "rapidfire(launchpad, FWorker(), strm_lvl=loglvl)"
    ]
   },
   {
@@ -149,11 +155,11 @@
    "outputs": [],
    "source": [
     "# Intialize Structures\n",
-    "al = pAtoms(bulk('Al', 'fcc'))\n",
-    "al.set_calculator(EMT())\n",
-    "al_dict = patoms2dict(ni)\n",
+    "ni = pAtoms(bulk('Ni', cubic=True))\n",
+    "ni.set_calculator(EMT())\n",
+    "ni_dict = patoms2dict(ni)\n",
     "\n",
-    "al_hash, calc_hash = hash_atoms(ni)"
+    "ni_hash, calc_hash = hash_atoms(ni)"
    ]
   },
   {
@@ -179,7 +185,7 @@
     "launchpad = LaunchPad()\n",
     "launchpad.add_wf(wf)\n",
     "# launch_rocket computes a single Firework\n",
-    "launch_rocket(launchpad, strm_lvl=\"CRITICAL\")"
+    "launch_rocket(launchpad, strm_lvl=loglvl)"
    ]
   },
   {
@@ -243,7 +249,7 @@
     "wf = Workflow([fw_calc, fw_to_db], {fw_calc:[fw_to_db]})\n",
     "launchpad.add_wf(wf)\n",
     "# Launch 2 rockets to complete the workflow\n",
-    "rapidfire(launchpad, nlaunches=2, strm_lvl=\"CRITICAL\")"
+    "rapidfire(launchpad, nlaunches=2, strm_lvl=loglvl)"
    ]
   },
   {
