update the way the template/setup_aims.py works + update in hilde.cfg.template

--- a/examples/md/watchdog/md_with_watchdog.ipynb
+++ b/examples/md/watchdog/md_with_watchdog.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aims = setup_aims(config_file=\"../../../hilde.cfg\", custom_settings={'compute_forces': True}, port=12345)"
+    "aims = setup_aims(config_file=\"../../../hilde.cfg\", custom_settings={'compute_forces': True, 'use_socketio': True})"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T = 100 * units.kB\n",
+    "T =  100 * units.kB\n",
     "\n",
     "MaxwellBoltzmannDistribution(atoms, temp=T)\n",
     "\n",
@@ -57,10 +57,8 @@
      "output_type": "stream",
      "text": [
       "0.00, 0.00, 30.00 0.00\n",
-      "0.00, 0.00, 18.93 11.07\n",
-      "5.53, 11.07, 15.35 14.65\n",
-      "4.88, 9.77, 11.21 18.79\n",
-      "4.70, 9.39, 7.71 22.29\n"
+      "0.00, 0.00, 16.36 13.64\n",
+      "6.82, 13.64, 11.95 18.05\n"
      ]
     }
    ],
